--- a/AMST4_Carousel.MVC/Views/Category/AddCategory.cshtml
+++ b/AMST4_Carousel.MVC/Views/Category/AddCategory.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "AddCategory";
 }
 
-<h1>AddCategory</h1>
+<h1>Criar Categoria</h1>
 
-<h4>Category</h4>
+<h4>Categoria</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,14 +28,14 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="CategoryList">Back to List</a>
+    <a asp-action="CategoryList">Voltar para a Lista</a>
 </div>
 
 @section Scripts {
