--- a/AMST4_Carousel.MVC/Views/Category/CategoryList.cshtml
+++ b/AMST4_Carousel.MVC/Views/Category/CategoryList.cshtml
@@ -7,7 +7,7 @@
 <h1>CategoryList</h1>
 
 <p>
-    <a asp-action="AddCategory">Create New</a>
+    <a asp-action="AddCategory">Criar Novo</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.IsActive)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                <a asp-action="DeleteCategory" asp-route-id="@item.Id">Excluir</a>
             </td>
         </tr>
 }
