--- a/AMST4_Carousel.MVC/Views/Shared/_Layout.cshtml
+++ b/AMST4_Carousel.MVC/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="CategoryList">Category</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Productlist">Product</a>
+                        </li>
                     </ul>
                 </div>
             </div>
