--- a/AMST4_Carousel.MVC/Views/Product/ProductList.cshtml
+++ b/AMST4_Carousel.MVC/Views/Product/ProductList.cshtml
@@ -39,7 +39,7 @@
                 <td class="m-3 p-3 text-start">
                     @if (!string.IsNullOrEmpty(item.ImageUrl))
                     {
-                        <img src="@Url.Content("~/" + item.ImageUrl)" alt="@item.Description" style="width: 100px; height: auto;" />
+                        <img src="@Url.Content("~/" + item.ImageUrl)" alt="@item.Description" style="width: 100px; height: 100px;" />
                     }
                     else
                     {
