--- a/AMST4_Carousel.MVC/Views/Category/DetailsCategory.cshtml
+++ b/AMST4_Carousel.MVC/Views/Category/DetailsCategory.cshtml
@@ -21,7 +21,7 @@
         <dd class = "col-sm-10">
             @if (!string.IsNullOrEmpty(Model.ImageUrl))
             {
-                <img src="@Url.Content("~/" + Model.ImageUrl)" alt="@Model.Description" style="width: 100px; height: auto;" />
+                <img src="@Url.Content("~/" + Model.ImageUrl)" alt="@Model.Description" style="width: 100px; height: 100px;" />
             }
             else
             {
